* fix manage/ swagger param type on 'id'
