# server/docs/swagger.yaml
@@ -2,7 +2,7 @@ host: api.V-HUB.net
 info:
   contact:
     name: API Support
-  description: This is WISMED V-HUB backend-api server. Updated@ 04-13-2023 16:10:24
+  description: This is WISMED V-HUB backend-api server. Updated@ 04-14-2023 16:22:48
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -543,13 +543,13 @@ paths:
       summary: toggle an action like 'ThumbsUp', 'HeartLike' of a Post.
       tags:
       - Interact
-  /api/manage/delete:
+  /api/manage/delete/{id}:
     delete:
       consumes:
       - application/json
       parameters:
       - description: Post ID for deleting
-        in: query
+        in: path
         name: id
         required: true
         type: string
@@ -559,7 +559,9 @@ paths:
         "200":
           description: OK - delete successfully
         "400":
-          description: Fail - incorrect query param id
+          description: Fail - incorrect path param 'id'
+        "405":
+          description: Fail - invoker's role is NOT in permit group
         "500":
           description: Fail - internal error
       security:
@@ -567,13 +569,13 @@ paths:
       summary: delete one Post content.
       tags:
       - Manage
-  /api/manage/erase:
+  /api/manage/erase/{id}:
     delete:
       consumes:
       - application/json
       parameters:
       - description: Post ID for erasing
-        in: query
+        in: path
         name: id
         required: true
         type: string
@@ -583,7 +585,9 @@ paths:
         "200":
           description: OK - erase successfully
         "400":
-          description: Fail - incorrect query param id
+          description: Fail - incorrect path param 'id'
+        "405":
+          description: Fail - invoker's role is NOT in permit group
         "500":
           description: Fail - internal error
       security:
